--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,10 +37,20 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   # For selecting images from the user's local storage
-  image_picker: ^0.8.4+3 
-  
+  image_picker: ^0.8.4+3
   flutter_image_compress: ^1.0.0-nullsafety  
   path_provider: ^2.0.5
+  animated_splash_screen: ^1.3.0
+  flutter_launcher_icons: ^0.13.1
+  page_transition: ^2.0.9
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/appicon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+
+
   
 dev_dependencies:
   flutter_test:
